	- The Linux/Unix printer dialog now uses BSD-style printing commands
	  (lpr/lpq) when SystemV-style commands (lp/lpstat) are not available.
	- Drawing alpha-blended images under X11 is now accelerated with
	  Xrender.
	- The fonts used for the FL_COURIER font family was changed on the Mac OS X
	  platform from 'Courier New' to 'Courier' because it was too thin.

	Bug fixes

	- Several box types were not drawn correctly when deactivated.
	  The background color for deactivated widgets is now correct:
	  fl_inactive(color()) (STR #2907).
	- Reading of .pbm image files is fixed: 1 is now interpreted as
	  black, and images of width a multiple of 8 are correctly read.
	  Note: if you relied on the faulty behavior you may need to fix
	  your image files.
	- Restored window background drawing, particularly the 'plastic'
	  scheme's background (STR #3059). This was a regression since
	  FLTK 1.3.0.
	- Fl_Text_Display: style buffer colors are no longer manipulated by
	  fl_contrast() for normal text drawing (fltk.coredev thread started
	  04/08/15, Subject: "RFC: Fl_Text_Display style buffer color weirdness")
	- Fl_Tree::deactivate() now affects draw color of items (must have
	  ABI 1.3.3 or higher enabled). For icons to draw deactivated,
	  enable ABI 1.3.4. (test/tree has a 'deactivate tree' button)
	- Fixed possible bad border effect when a set of radio menu items
	  is located first in its menu (STR #3176): Fl_Menu_Item::set_only()
	  is deprecated and replaced by Fl_Menu_::set_only(Fl_Menu_item*).


CHANGES IN FLTK 1.3.3					RELEASED: Nov 03 2014

	New features and extensions

	- New class Fl_Copy_Surface allows copying graphical data to the
	  clipboard in a cross-platform way (STR #3058).
	- Support for pasting graphical data from the clipboard to a widget.
	- New class Fl_Image_Surface allows drawing into an Fl_Image object.
	- Methods Fl::add_clipboard_notify() and Fl::remove_clipboard_notify()
	  to get notifications whenever the clipboard changes (STR #2636).