@@ -39,6 +39,8 @@ CHANGES IN FLTK 1.3.4					RELEASED: ??? ?? ????
 
 	Bug fixes
 
+	- fluid doesn't output trailing white space in .fl files after
+	  some statements anymore (STR #3239).
 	- Several box types were not drawn correctly when deactivated.
 	  The background color for deactivated widgets is now correct:
 	  fl_inactive(color()) (STR #2907).
